implements registration and login with spring security, displaying different modules on the homescreen based on the user role