@@ -2,8 +2,13 @@ package br.com.fiap.task_manager_security.service;
 
 
 import br.com.fiap.task_manager_security.controller.dto.TaskDTO;
+import br.com.fiap.task_manager_security.controller.dto.UserDTO;
+import br.com.fiap.task_manager_security.controller.mapper.TaskMapper;
+import br.com.fiap.task_manager_security.controller.mapper.UserMapper;
 import br.com.fiap.task_manager_security.entity.Task;
+import br.com.fiap.task_manager_security.entity.User;
 import br.com.fiap.task_manager_security.repository.TaskRepository;
+import br.com.fiap.task_manager_security.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -11,40 +16,50 @@ import java.util.stream.Collectors;
 
 @Service
 public class TaskService {
-    private final TaskMapper taskMapper;
+
     private final TaskRepository taskRepository;
+    private final TaskMapper taskMapper;
+    private final UserMapper userMapper;
 
-    public TaskService(TaskMapper taskMapper, TaskRepository taskRepository) {
-        this.taskMapper = taskMapper;
+    TaskService(TaskRepository taskRepository, TaskMapper taskMapper, UserMapper userMapper) {
         this.taskRepository = taskRepository;
+        this.taskMapper = taskMapper;
+        this.userMapper = userMapper;
     }
 
-    public TaskDTO saveTask(TaskDTO taskDTO) {
-        Task taskToSave = taskMapper.toEntity(taskDTO);
-        Task savedTask = taskRepository.save(taskToSave);
-        taskDTO.setId(savedTask.getId());
-        return taskDTO;
-    }
-
-    public List<TaskDTO> getAllTasks() {
+    public List<TaskDTO> getAll() {
         return taskRepository.findAll().stream()
+                .map(taskMapper::toDTO)
+                .toList();
+    }
+
+    public List<TaskDTO> getByAsignee(UserDTO asignee) {
+        User user = userMapper.toEntity(asignee);
+        List<Task> foundTasks= taskRepository.findByAssignee(user);
+        return foundTasks.stream()
                 .map(taskMapper::toDTO)
                 .collect(Collectors.toList());
     }
 
-    public TaskDTO getTaskById(Long id) {
+    public TaskDTO getById(Long id) {
         Task foundTask = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Task not found"));
+                .orElseThrow(() -> new RuntimeException("Tarefa não encontrada"));
         return taskMapper.toDTO(foundTask);
     }
 
-    public void deleteTaskById(Long id) {
-        Task taskToDelete = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Task not found"));
-        taskRepository.delete(taskToDelete);
+    public TaskDTO save(TaskDTO taskDTO) {
+        Task savedTask = taskRepository.save(taskMapper.toEntity(taskDTO));
+        taskDTO.setId(savedTask.getId());
+        return taskDTO;
     }
 
-    public List<Long> getAllTaskIds() {
-        return taskRepository.findAll().stream().map(Task::getId).collect(Collectors.toList());
+    public void deleteById(Long id) {
+        taskRepository.deleteById(id);
+    }
+
+    public List<TaskDTO> findByAssignee(User currentUser) {
+        return taskRepository.findByAssignee(currentUser).stream()
+                .map(taskMapper::toDTO)
+                .toList();
     }
 }
